public/css/partials/notification.css
.notification-container {
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: fixed;
  top: 48px;
  right: 0;
  list-style: none;
  margin: 16px;
  z-index: 1000;
}

.notification-card {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 16px;
  font-size: 14px;
  padding: 16px 24px;
  border-radius: 4px;
  min-width: 400px;
  opacity: 0;
  transform: translateX(150%);
  transition:
  opacity 0.3s ease,
  transform 0.3s ease;
}

.error {
  background-color: var(--error-bg);
}

.success {
  background-color: var(--success-bg);
}

.close-btn {
  font-size: 22px;
  cursor: pointer;
}

.fade-in {
  transform: translateX(0);
  opacity: 1;
}

@media (max-width: 480px) {
  .errors-container {
    left: 0;
    right: 0;
  }

  .notification-card {
    font-size: 14px;
    min-width: 0;
    width: 100%;
  }
}

